Finished MVVM Architecture